# simple_qt_project

./: CMakeLists.txt  README.md  hello-qt.cpp  login.cpp  login.h  mainwindow.h  profile.cpp  profile.h  qt-layout.cpp  showimg.cpp  showimg.h
